# camera-triggering-vectornav-ros

./: CMakeLists.txt  InterfaceProgramInfo_20190526.pptx  README.md  package.xml
launch/: vectornav.launch
msg/: ku_gps.msg
params/: vn300.yaml
src/: main.cpp
vnproglib-1.1/cpp/src/: compositedata.cpp
